@@ -2,9 +2,11 @@ package co.kr.allpick.domain.product.dto;
 
 import java.math.BigDecimal;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import org.springframework.data.domain.Page;
 
 import co.kr.allpick.domain.product.entity.Product;
+import co.kr.allpick.domain.review.dto.ReviewResponseDto;
 import io.swagger.v3.oas.annotations.media.Schema;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
@@ -19,7 +21,7 @@ import lombok.NoArgsConstructor;
 @Getter
 
 @Schema(description = "상품 상세페이지 요청 DTO")
-public class ProductDetailResDto {
+public class ProductDetailResponseDto {
 	@NotNull
 	@Schema(description = "상품 Id", example ="1", requiredMode = Schema.RequiredMode.REQUIRED)
 	private Long productId;							
@@ -36,15 +38,13 @@ public class ProductDetailResDto {
 	@Schema(description = "대표이미지url", example ="\"https://allpick.com\"", requiredMode = Schema.RequiredMode.REQUIRED)
 	private String thumbnailUrl;					
 	
-	@Schema(description = "상품옵션 리스트")
-	private List<ProductOptionResDto> optionList;
-	@Schema(description = "상품이미지 리스트")
-	private List<ProductImageResDto> productImagesList;				
+	
 	
 	@NotNull
 	@PositiveOrZero
 	@Schema(description = "판매가격", example ="25000", requiredMode = Schema.RequiredMode.REQUIRED)
-	private BigDecimal price;						
+	private BigDecimal price;		
+	
 	@NotBlank
 	@Schema(description = "상품 상세 설명", example ="나이키 에어맥스 97의 클래식 화이트 컬러입니다. "
 									   , requiredMode = Schema.RequiredMode.REQUIRED)
@@ -59,24 +59,33 @@ public class ProductDetailResDto {
 	@Schema(description = "주의사항", example ="직사광선을 피해 보관하세요", requiredMode = Schema.RequiredMode.REQUIRED)
 	private String precaution;						
 	
-	public static ProductDetailResDto from(Product product) {
-		return ProductDetailResDto.builder()
+	@Schema(description = "상품옵션 리스트")
+	private List<ProductOptionResponseDto> optionList;
+	@Schema(description = "상품이미지 리스트")
+	private List<ProductImageResponseDto> productImagesList;				
+	@Schema(description = "상품 리뷰 리스트")
+	private Page<ReviewResponseDto> reviewList;
+	
+	public static ProductDetailResponseDto from(Product product, Page<ReviewResponseDto> reviewList) {
+		return ProductDetailResponseDto.builder()
 				.productId(product.getProductId())
-				.parentCategoryName(product.getParentCategory().getCategoryName())
+				.parentCategoryName(product.getParentCategory() != null ?
+						product.getParentCategory().getCategoryName() : "미분류")
 				.brand(product.getBrand())
 				.productName(product.getProductName())
 				.thumbnailUrl(product.getThumbnailUrl())
 				.price(product.getPrice())
 				.description(product.getDescription())
 				.manufacturer(product.getManufacturer())
-				.origin(product.getOrigin())
+				.origin(product.getOrigin()) 
 				.precaution(product.getPrecaution())
 				.optionList(product.getOptionList().stream()
-						.map(ProductOptionResDto::from)
-						.collect(Collectors.toList()))
+						.map(ProductOptionResponseDto::from)
+						.toList())
 				.productImagesList(product.getProductImageList().stream()
-						.map(ProductImageResDto::from)
-						.collect(Collectors.toList()))
-				.build();
+						.map(ProductImageResponseDto::from)
+						.toList()) 
+				.reviewList(reviewList)  
+ 				.build();    
 	}
-}
+} 
